docs: update doc
